change license and correct package.yaml

--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                haskip8
 version:             0.1.0.0
 github:              "lynxnot/haskip8"
-license:             BSD3
-author:              "Author name here"
+license:             MIT
+author:              "lynxnot"
 maintainer:          "example@example.com"
-copyright:           "2019 Author name here"
+copyright:           "2019 lynxnot"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/haskip8#readme>
+description:         Please see theREADME on GitHub at <https://github.com/lynxnot/haskip8#readme>
 
 dependencies:
 - base >= 4.7 && < 5
